--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db": "^6.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "vercel": "^48.2.0"
   }
 }
